added the swager in rentals, cars and authntification controllers
